<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name" translatable="false">Allo chef</string>
    <string name="empty_warning">This field is required</string>
    <string name="detect_location">locate me</string>
    <string name="location_is_off" translatable="false">Location off</string>
    <string name="location_off_body_message" translatable="false">please open your location</string>
    <string name="not_all_permission_accepted">Please accept the permissions</string>

    <!-- General Strings -->
    <string name="connection_error">Connection Error</string>
    <string name="no_internet">No internet connection please try again later</string>
    <string name="retry">Retry</string>
    <string name="cancel">Cancel</string>
    <string name="some_error">Some error occurred, Please try again later</string>

    <!-- Home -->
    <string name="home">Home</string>
    <string name="account">Account</string>

    <!-- Tutorial -->
    <string name="dot" translatable="false">•</string>
    <string name="next">Next</string>
    <!-- Intro -->
    <string name="design_program">Design and program</string>

    <!-- Log In -->
    <string name="login">Login</string>
    <string name="phone_hint">Mobile Number</string>
    <string name="password">Password</string>
    <string name="login_as_guest">Visitor</string>
    <string name="forgot_header">Forgot Password</string>

    <!-- Sign Up -->
    <string name="sign_up">Sign up</string>

    <!-- Account -->
    <string name="log_out">Log out</string>
    <string name="skip">Skip</string>
    <!--  <string name="google_api_key">Continue as a guest</string>-->

    <string name="privacy">Privacy policy</string>
    <string name="profile">Profile</string>
    <string name="not_match_password">The two passwords do not match</string>
    <string name="active">Activate the account</string>
    <string name="open_app">Start app</string>
    <string name="confirm">Verify Phone</string>
    <!--  Side Menu-->
    <string name="about">About the app</string>
    <string name="terms">Terms of use</string>
    <string name="contact_us">Contact us</string>
    <string name="support">Customer support</string>
    <string name="share">Share</string>
    <string name="rate">Rate app</string>
    <string name="ratings">Ratings</string>

    <!--  Suggestions-->
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <!--Contact Us-->
    <!--Countries-->
    <string name="country_hint">Choose the country</string>
    <string name="login_btn">Login</string>
    <string name="new_account">SignUp</string>
    <string name="create_an_account">Don’t have an account?</string>
    <string name="photo">Photo</string>

    <string name="log_out_hint">Are you sure you want to log out?</string>
    <string name="favorite">Favorite</string>
    <string name="subscribe_account">Subscribe now</string>
    <string name="change_language">Change language</string>
    <string name="about_80">About <font fgcolor='#FD5A1F'>A</font>llo Chef</string>
    <string name="team">Team</string>
    <string name="version_name">Version</string>
    <string name="ar">اللغة العربية</string>
    <string name="en">English</string>
    <string name="save">Save</string>
    <string name="create_account">Create Account</string>
    <string name="change_password">Change password</string>
    <string name="password_hint_confirm">Confirm password</string>
    <string name="old_password">Old password</string>
    <string name="forget_password">Forget password?</string>
    <string name="send">Send</string>
    <string name="cart">Cart</string>
    <string name="choose_country">Choose country first</string>
    <string name="valid_egy_number">Number format is not valid</string>
    <string name="email_not_valid">Email not valid</string>
    <string name="confirm_resend"><u>Resend</u></string>
    <string name="default_notification_channel_id" translatable="false">allo_app_notification_channel_id</string>
    <string name="permission_dialog_content1">Allow permission to receive notification</string>
    <string name="please_enter_4_digit_code">Please enter the 4 digit code send to</string>
    <string name="verify">Verify</string>
    <string name="enter_password_to_create">Enter password to create your \nnew password</string>
    <string name="already_have_account">Already have an account ?</string>
    <string name="forget_password_title">Forget password</string>
    <string name="home_search_hint">Search for product</string>
    <string name="all_categories">All Categories</string>
    <string name="menu">Menu</string>
    <string name="view_all">View All</string>
    <string name="banner">Banner</string>
    <string name="popular_items">Popular Items</string>
    <string name="quick_view">Quick view</string>
    <string name="latest_items">Latest items</string>
    <string name="search">Search</string>

    <string name="email">Email</string>

    <string name="login_header_number">Welcome Back</string>
    <string name="login_header">Sign in to continue</string>
    <string name="login_social">Login With Social Media</string>
    <string name="forget_body">Please enter your phone. to get the verification code</string>
    <string name="confirm_header_text">A confirmation code will be sent to your Mobile. Enter the activation code</string>
    <string name="tv_confirm_code_text">Did n’t you received any code?</string>
    <string name="register_login">Sign up</string>
    <string name="sign_up_header">It’s great to see you</string>
    <string name="name_hint">Full Name</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="agree_to">I agree to Allo <font fgcolor='#FD5A1F'>Terms and services, Privacy policy,</font>and <font fgcolor='#FD5A1F'>Content policy </font></string>
    <string name="have_account">Already have account ? <font fgcolor='#FD5A1F'>Sign in</font></string>
    <string name="terms_accepted">Please agree to the terms and conditions</string>
    <string name="change_header">New password</string>
    <string name="change_header_text">Please enter your new password and make sure that anyone know about it</string>
    <string name="ask_preimum">Subscriptions</string>
    <string name="fri">FRI</string>
    <string name="point">Point</string>
    <string name="coin">EGP</string>
    <string name="add_cart">Add to cart</string>
    <string name="subscribe">Subscribe Now</string>
    <string name="meals_calendar">Show my meals</string>
    <string name="menuVip" translatable="false">Vip</string>
    <string name="menuMore">More</string>
    <string name="vip_title">Previous meals</string>
    <string name="vip_warning">You don\'t have previous meals</string>
    <string name="try_login">Try to login</string>
    <string name="empty_favorites">Where is the Love?\n<font fgcolor='#8A98A3'>Once you favourite a meal, it will appear here.</font></string>
    <string name="my_account">My Account</string>
    <string name="tv_wallet">Wallet</string>
    <string name="my_orders">My Orders</string>
    <string name="my_location">My Location</string>
    <string name="my_favorites">My Favourites</string>
    <string name="subscriptions">Subscriptions</string>
    <string name="account_settings">Settings</string>
    <string name="message_hint">Message</string>
    <string name="market_details">Details</string>
    <string name="ingredients">Ingredients</string>
    <string name="methods">Method</string>
    <string name="tv_similar">other Day meals</string>
    <string name="gm"> <font fgcolor='#2B2A2A'>gm</font></string>
    <string name="persons">persons</string>
    <string name="package_name">Package Name</string>
    <string name="expire_date">Expire at</string>
    <string name="old_points">Old points :</string>
    <string name="new_points">New points :</string>
    <string name="old_wallet">Old wallet :</string>
    <string name="new_wallet">New wallet</string>
    <string name="transaction">Transactions</string>
    <string name="tv_track">Track Order</string>
    <string name="delivered">Delivered</string>
    <string name="on_way">On way</string>
    <string name="order_received">Order received</string>
    <string name="empty_orders">No Orders are Saved\nOnce you order product , it will appear here.</string>
    <string name="order_history">Orders history</string>
    <string name="days">Days</string>
    <string name="tv_subscription"><font fgcolor='#FD5A1F'>Alo</font> chef packages</string>
    <string name="your_location">Your Location</string>
    <string name="edit">Edit</string>
    <string name="delete_event">Delete</string>
    <string name="add_place">Add place</string>
    <string name="no_places">No Places are Saved\nOnce you favourite a places , it will appear here.</string>
    <string name="address_title">Address name</string>
    <string name="address_hint">Street Address</string>
    <string name="floor_hint">Floor Apartment</string>
    <string name="tab_location">Tab to get your location</string>
    <string name="register_city_hint">City</string>
    <string name="register_region_hint">Region</string>
    <string name="add_promo">Apply Coupon</string>
    <string name="delivery_time">Delivery time</string>
    <string name="choose_payment">Choose your payment</string>
    <string name="discount">Discount</string>
    <string name="sub_total">Item Total</string>
    <string name="delivery_dates">Delivery dates</string>
    <string name="cart_total">Total</string>
    <string name="change_location">Change</string>
    <string name="total_delivery_fee">Total delivery fees</string>
    <string name="pickup_your_location">Pick up your location</string>
    <string name="finish_order">Finish Order</string>
    <string name="change_delivery_time">Change delivery time</string>
    <string name="online">Online</string>
    <string name="checkout">Check out</string>
    <string name="coupon_Code">Coupon Code !</string>
    <string name="apply">Apply</string>
    <string name="promo_hint">Enter yor Coupon</string>
    <string name="tv_choose_delivery">Stay safe &amp; enjoy online shopping></string>
    <string name="tv_select_time">Choose time to receive your order</string>
    <string name="tv_delivery_instruction">Enter Delivery instructions</string>
    <string name="tv_select_time_hint">Please enter instruction in details</string>
    <string name="confirm_times">Confirm</string>
    <string name="delivey_time_title">choose Delivery Time</string>
    <string name="balance_not_enough">Your balance not enough</string>
    <string name="payment_cancelled">Payment cancelled</string>
    <string name="yes">Yes</string>
    <string name="location_picked">Location Picked Successfully</string>
    <string name="cart_empty" >Cart Empty</string>
    <string name="facebook_app_id" translatable="false">501860708822235</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb1234</string>
    <string name="facebook_client_token" translatable="false">d18e50e9bfd5fc7d8fa897ab497ad784</string>
    <string name="subscribe_done">Subscribe Successfully</string>
    <string name="added_cart">Added to cart successfully</string>
    <string name="phone_not_valid">رقم الهاتف غير صحيح</string>
    <string name="no_meals">No meals available at this day</string>

</resources>