<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/vipFragment"
        android:icon="@drawable/ic_menu_vip"
        android:title="@string/menuVip" />

    <item
        android:id="@+id/favoriteFragment"
        android:icon="@drawable/ic_menu_favorite"
        android:title="@string/favorite" />

    <item
        android:id="@+id/home_fragment"
        android:icon="@drawable/ic_home"
        android:title="@string/home" />

    <item
        android:id="@+id/accountFragment"
        android:icon="@drawable/ic_user"
        android:title="@string/account" />

    <item
        android:id="@+id/moreFragment"
        android:icon="@drawable/ic_more_contact"
        android:title="@string/menuMore" />


</menu>