<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_account"
    app:startDestination="@id/languageFragment">

    <fragment
        android:id="@+id/languageFragment"
        android:name="app.te.alo_chef.presentation.account.LanguageFragment"
        tools:layout="@layout/fragment_language">
        <deepLink
            android:id="@+id/deepLink8"
            app:uri="android-app://language.alo_chef" />
    </fragment>

    <fragment
        android:id="@+id/profileFragment"
        android:name="app.te.alo_chef.presentation.profile.ProfileFragment"
        tools:layout="@layout/fragment_profile">
        <action
            android:id="@+id/action_profileFragment_to_changePasswordFragment"
            app:destination="@id/changePasswordFragment"
            app:enterAnim="@anim/anim_slide_in_right"
            app:exitAnim="@anim/anim_slide_out_left"
            app:popEnterAnim="@anim/anim_slide_in_left"
            app:popExitAnim="@anim/anim_slide_out_right" />
        <deepLink
            android:id="@+id/deepLink11"
            app:uri="android-app://profile.alo_chef" />
    </fragment>

    <fragment
        android:id="@+id/changePasswordFragment"
        android:name="app.te.alo_chef.presentation.profile.changePassword.ChangePasswordFragment"
        tools:layout="@layout/fragment_change_password" />

    <fragment
        android:id="@+id/walletFragment"
        android:name="app.te.alo_chef.presentation.wallet.WalletFragment"
        android:label="@string/tv_wallet"
        tools:layout="@layout/fragment_wallet">
        <deepLink
            android:id="@+id/deepLink9"
            app:uri="android-app://wallet.alo_chef" />
    </fragment>

    <include app:graph="@navigation/nav_auth" />
    <fragment
        android:id="@+id/myOrdersFragment"
        android:name="app.te.alo_chef.presentation.my_orders.MyOrdersFragment"
        android:label="@string/my_orders"
        tools:layout="@layout/fragment_my_orders">
        <action
            android:id="@+id/action_myOrdersFragment_to_trackOrderFragment"
            app:destination="@id/trackOrderFragment"
            app:enterAnim="@anim/anim_slide_in_right"
            app:exitAnim="@anim/anim_slide_out_left"
            app:popEnterAnim="@anim/anim_slide_in_left"
            app:popExitAnim="@anim/anim_slide_out_right" />
        <action
            android:id="@+id/action_myOrdersFragment_to_previousOrdersFragment"
            app:destination="@id/previousOrdersFragment"
            app:enterAnim="@anim/anim_slide_in_right"
            app:exitAnim="@anim/anim_slide_out_left"
            app:popEnterAnim="@anim/anim_slide_in_left"
            app:popExitAnim="@anim/anim_slide_out_right" />
        <deepLink
            android:id="@+id/deepLink13"
            app:uri="android-app://orders.alo_chef" />
    </fragment>

    <fragment
        android:id="@+id/trackOrderFragment"
        android:name="app.te.alo_chef.presentation.my_orders.TrackOrderFragment"
        android:label="@string/tv_track"
        tools:layout="@layout/fragment_track_order" />
    <fragment
        android:id="@+id/previousOrdersFragment"
        android:name="app.te.alo_chef.presentation.my_orders.PreviousOrdersFragment"
        android:label="@string/order_history"
        tools:layout="@layout/fragment_previous_orders">
        <action
            android:id="@+id/action_previousOrdersFragment_to_trackOrderFragment"
            app:destination="@id/trackOrderFragment"
            app:enterAnim="@anim/anim_slide_in_right"
            app:exitAnim="@anim/anim_slide_out_left"
            app:popEnterAnim="@anim/anim_slide_in_left"
            app:popExitAnim="@anim/anim_slide_out_right" />
    </fragment>


    <fragment
        android:id="@+id/subscriptionsFragment"
        android:name="app.te.alo_chef.presentation.subscriptions.SubscriptionsFragment"
        android:label="@string/subscriptions"
        tools:layout="@layout/fragment_subscriptions">
        <deepLink
            android:id="@+id/deepLink10"
            app:uri="android-app://subscriptions.alo_chef" />
    </fragment>
    <fragment
        android:id="@+id/myLocationsFragment"
        android:name="app.te.alo_chef.presentation.my_locations.MyLocationsFragment"
        android:label="@string/my_location"
        tools:layout="@layout/fragment_my_location">
        <action
            android:id="@+id/action_myLocationsFragment_to_addLocationFragment"
            app:destination="@id/addLocationFragment"
            app:enterAnim="@anim/anim_slide_in_right"
            app:exitAnim="@anim/anim_slide_out_left"
            app:popEnterAnim="@anim/anim_slide_in_left"
            app:popExitAnim="@anim/anim_slide_out_right" />
        <deepLink
            android:id="@+id/deepLink12"
            app:uri="android-app://locations.alo_chef" />
    </fragment>
    <fragment
        android:id="@+id/addLocationFragment"
        android:name="app.te.alo_chef.presentation.my_locations.AddLocationFragment"
        android:label="@string/add_place"
        tools:layout="@layout/fragment_add_place" />

</navigation>